# ProyectoProg3-Gomez-Ossana-Caceres

./: CMakeLists.txt  Inventariado Fisico.csv  README.md  main.cpp  pruebaCodigo.cpp
Estructuras/: ArbolBinario.h  ArbolBinarioAVL.h  Cola.h  Lista.h  NodoArbol.h  NodoArbolAVL.h  nodo.h
FTC/: main.cpp
FTC/ColaFT/: Cliente.h  Cola.h  ColaPrioridad.h  Pila.h  README.md  nodoES.h  nodoPrioridad.h
FTC/Lista Depositos/: nodo.h
Limpio/: Limpio  Limpio.cpp  Procesador_inventario.cpp
Limpio/EstructurasLimpio/: ArbolAVL.h  ArbolBinario.h  ArbolBinarioAVL.h  ListaFT.h  NodoArbol.h  NodoArbolAVL.h  NodoArbolAVL_SL.h  nodo.h
