cmake_minimum_required(VERSION 3.24.2)
project(ProyectoProg3_Gomez_Ossana_Caceres)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProyectoProg3_Gomez_Ossana_Caceres main.cpp
        pruebaCodigo.cpp)
add_executable( pruebaCodigo.cpp
        pruebaCodigo.cpp)
add_executable(
        Limpio
        Limpio/Limpio.cpp)